matomo/openshift/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: matomo
  annotations:
    haproxy.router.openshift.io/ip_whitelist: >-
      142.32.0.0/16 142.29.0.0/16 142.28.0.0/16 10.0.0.0/16
    haproxy.router.openshift.io/ip_whitelist_comment: >-
      #CIDR 142... only allow BC Gov internal ips
  labels:
    app: matomo
spec:
  host: cleanbcdx-matomo-dev.apps.gold.devops.gov.bc.ca
  to:
    kind: Service
    name: matomo
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
